--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mantine/core": "^8.1.2",
     "@mantine/hooks": "^8.1.2",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.2",
     "next": "15.3.4",
     "openai": "^5.8.2",
