--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ dependencies = [
     "pymupdf",
     "langgraph>=0.5.0",
     "ipykernel>=6.29.5",
+    "langchain-openai>=0.3.27",
+    "datetime>=5.5",
 ]
 
 [project.optional-dependencies]
