--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "ipykernel>=6.29.5",
     "langchain-openai>=0.3.27",
     "datetime>=5.5",
+    "pyarrow>=20.0.0",
 ]
 
 [project.optional-dependencies]
