--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "langchain-openai>=0.3.27",
     "datetime>=5.5",
     "pyarrow>=20.0.0",
+    "extract-msg>=0.54.1",
 ]
 
 [project.optional-dependencies]
