--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ OPENAI_API_KEY="sk-xxxxxx"
 PINECONE_INDEX="nyase-rag-bot"
 PINECONE_ENV="us-east-1-aws"
 PINECONE_NAMESPACE="nyase-rag-bot"
+
+EXCEL_PATH="./example.xlsx"
+
+SUPABASE_URL="https://xxxxxx.supabase.co"
+SUPABASE_SERVICE_ROLE_KEY="xxxxxx"
