--- a/Frontend/.env.example
+++ b/Frontend/.env.example
@@ -2,3 +2,5 @@
 VITE_SUPABASE_URL=supabase url
 VITE_SUPABASE_ANON_KEY=supabase anon key
 
+# Backend related keys:
+VITE_BACKEND_URL=http://localhost:8000
