--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -115,7 +115,7 @@ python-docx==1.2.0
 python-dotenv==1.1.1
 python-multipart==0.0.20
 pytz==2025.2
-pywin32==310
+#pywin32==310
 pyyaml==6.0.2
 pyzmq==27.0.0
 realtime==2.6.0
